bundled_metadata/force-app/main/default/objects/EUSFA_Development_Task_Mapping__c/EUSFA_Development_Task_Mapping__c.object-meta.xml
<CustomObject>
    <label>Development Task Mapping</label>
    <nameField>
        <label>Development Task Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Development Task Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>