bundled_metadata/force-app/main/default/objects/EUSFA_Development_Task_Mapping__c/fields/EUSFA_KPI_ID__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_KPI_ID__c</fullName>
    <label>KPI ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>