bundled_metadata/force-app/main/default/objects/EUSFA_Development_Task_Mapping__c/fields/EUSFA_Subtitle_in_Savvy__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Subtitle_in_Savvy__c</fullName>
    <label>Subtitle in Savvy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>