bundled_metadata/force-app/main/default/objects/EUSFA_Development_Task_Mapping__c/fields/EUSFA_Title_in_Savvy__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Title_in_Savvy__c</fullName>
    <label>Title in Savvy</label>
    <length>200</length>
    <type>Text</type>
</CustomField>