bundled_metadata/force-app/main/default/objects/EUSFA_Development_Task_Mapping__c/fields/KPI_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Name__c</fullName>
    <label>KPI Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>